# v0-security-event-clustering

./: README.md
app/: page.tsx
scripts/security_clustering/: inference.py  main.py  pyproject.toml  run_deep_clustering_demo.py  run_demo.py
scripts/security_clustering/src/: __init__.py  clustering.py  data_generator.py  deep_clustering.py  feature_encoder.py  models.py  parser.py  trainer.py  visualization.py
