[project]
name = "security-event-clustering"
version = "0.1.0"
description = "Deep learning based security event clustering using PyTorch"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "umap-learn>=0.5.0",
]

[tool.uv]
dev-dependencies = []
